# Course_project_hhru2

./: .coverage  .flake8  .gitignore  README.md  main.py  pyproject.toml
data/: vacancies.json
src/: external_api.py  filter.py  hh_class.py  saver_class.py
test/: conftest.py  test_external_api.py  test_filter.py  test_hh_class.py  test_saver_class.py
